Fix autostretch bug for images
Now articles' images display ok if it small or wide.

--- a/css/wrioos.css
+++ b/css/wrioos.css
@@ -72,7 +72,8 @@ a,a:hover{color:#337ab7}
 a.btn .glyphicon{padding-right:8px}
 .btn-group-sm .btn,.btn-group-sm .navbar .navbar-nav>li>a.btn,.btn.btn-sm,.navbar .navbar-nav>li>a.btn.btn-sm{padding:15px 20px}
 .glyphicon-new-window{margin-left:4px}
-#centerWrp>img{width:auto;height:auto}
+#centerWrp>img{width:auto;height:auto
+.card img{display:block;margin:auto;width:auto;max-width:100%}
 a .media{height:200px;margin-top:2rem!important}
   a .media h2{color:#222;margin-top:12px}
   a .media p{color:#222;margin:12px 0}
